Testes e caso de uso de Autenticação

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "satrt:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +23,9 @@
     "prisma": "5.8.1",
     "tsup": "8.0.1",
     "tsx": "4.7.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "1.2.2"
   },
   "dependencies": {
     "@prisma/client": "5.8.1",
