--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-NODE_ENV=DEV
+NODE_ENV=dev
+
+JWT_SECRET=ignitenode03
+
+DATABASE_URL="postgresql://dockerUser:dockerUser@localhost:5432/gympassapp?schema=public"
