--- a/prisma/vitest-environment-prisma/package.json
+++ b/prisma/vitest-environment-prisma/package.json
@@ -5,5 +5,8 @@
   "main": "prisma-test-environment.ts",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vitest-environment-prisma": "file:"
+  }
 }
