--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,19 +20,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests with coverage
-        run: npm run test:coverage  # Gera o relatório de cobertura
-
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: coverage/lcov.info  # Caminho para o relatório de cobertura
+      - name: Run tests
+        run: npm run test  
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: run-tests  # Espera os testes serem executados
+    needs: run-tests 
 
     steps:
       - name: Checkout code
@@ -48,18 +42,18 @@ jobs:
         run: npm ci
 
       - name: Build the application
-        run: npm run build -- out-dir=build  # Ajuste conforme necessário
+        run: npm run build -- out-dir=build  
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: build/  # Caminho do diretório de build
+          path: build/  
 
   notify:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: [run-tests, build]  # Espera os jobs anteriores
+    needs: run-tests  
 
     steps:
       - name: Checkout code
