--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -50,24 +50,16 @@ jobs:
           name: build-artifact
           path: build/  
 
-  notify:
+  notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: run-tests  
+    needs: build
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Send email notification
-        run: |
-          echo "Pipeline executed!" | mail -s "CI Pipeline Notification" ${{ secrets.NOTIFICATION_EMAIL }}
+      - name: Execute external scripts
+        run: sh scripts/shell.sh
+        env:
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
