--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,10 +23,27 @@ jobs:
       - name: Run tests
         run: npm run test  
 
+  run-tests-parallel:
+    name: Run Additional Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: run-tests 
+    needs: [run-tests, run-tests-parallel]  
 
     steps:
       - name: Checkout code
@@ -59,7 +76,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Make script executable
+        run: chmod +x scripts/shell.sh
+
       - name: Execute external scripts
         run: sh scripts/shell.sh
         env:
-          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  
