--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,27 +23,10 @@ jobs:
       - name: Run tests
         run: npm run test  
 
-  run-tests-parallel:
-    name: Run Additional Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests, run-tests-parallel]  
+    needs: run-tests  # Espera apenas o job de testes
 
     steps:
       - name: Checkout code
@@ -70,7 +53,7 @@ jobs:
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: build
+    needs: run-tests  # Também espera apenas o job de testes
 
     steps:
       - name: Checkout code
@@ -82,4 +65,4 @@ jobs:
       - name: Execute external scripts
         run: sh scripts/shell.sh
         env:
-          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
