--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests]  
+    needs: run-tests  
 
     steps:
       - name: Checkout code
@@ -53,14 +53,14 @@ jobs:
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: build
+    needs: run-tests  
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install mailutils
-        run: sudo apt-get install -y mailutils  # Instala o mailutils
+        run: sudo apt-get install -y mailutils 
 
       - name: Make script executable
         run: chmod +x scripts/shell.sh
@@ -68,4 +68,4 @@ jobs:
       - name: Execute external scripts
         run: sh scripts/shell.sh
         env:
-          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  # Use a variável de ambiente para o e-mail
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  
