--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,10 +23,16 @@ jobs:
       - name: Run tests
         run: npm run test  
 
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: coverage/lcov.info  
+
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: run-tests  # Espera apenas o job de testes
+    needs: run-tests  
 
     steps:
       - name: Checkout code
@@ -48,12 +54,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: build/  
+          path: build/ 
 
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: run-tests  # Também espera apenas o job de testes
+    needs: run-tests  
 
     steps:
       - name: Checkout code
@@ -66,3 +72,7 @@ jobs:
         run: sh scripts/shell.sh
         env:
           NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
+
+      - name: Send Pipeline Notification
+        run: |
+          echo "Pipeline executado!" | mail -s "CI Pipeline Notification" ${{ secrets.NOTIFICATION_EMAIL }}
