--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,7 +26,7 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests]  
+    needs: [run-tests]  # Continua dependendo dos testes
 
     steps:
       - name: Checkout code
@@ -53,7 +53,7 @@ jobs:
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: build
+    needs: [run-tests]  
 
     steps:
       - name: Checkout code
@@ -61,7 +61,7 @@ jobs:
 
       - name: Install mailutils
         run: sudo apt-get update && sudo apt-get install -y mailutils  
-        
+
       - name: Make script executable
         run: chmod +x scripts/shell.sh
 
