--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -21,12 +21,18 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test  
+        run: npm run test -- --reporter junit --report-dir test-results  
+
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test-results/  
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests]  # Continua dependendo dos testes
+    needs: [run-tests]
 
     steps:
       - name: Checkout code
@@ -48,19 +54,19 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: build/  
+          path: build/
 
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: [run-tests]  
+    needs: [run-tests]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install mailutils
-        run: sudo apt-get update && sudo apt-get install -y mailutils  
+        run: sudo apt-get update && sudo apt-get install -y mailutils
 
       - name: Make script executable
         run: chmod +x scripts/shell.sh
@@ -68,4 +74,4 @@ jobs:
       - name: Execute external script to send email
         run: sh scripts/shell.sh
         env:
-          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
