--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,14 +20,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm run test -- --reporter junit --report-dir test-results  
+      - name: Run tests with coverage
+        run: npm run test:coverage
 
-      - name: Upload Test Report
+      - name: Upload Coverage Report
         uses: actions/upload-artifact@v3
         with:
-          name: test-report
-          path: test-results/  
+          name: coverage-report
+          path: coverage/ 
 
   build:
     name: Build Application
