--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,19 +20,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests with coverage
-        run: npm run test:coverage
+      - name: Run tests and generate report
+        run: npm run test -- --reporter junit --report-dir test-results  
 
-      - name: Upload Coverage Report
+      - name: Upload Test Results
         uses: actions/upload-artifact@v3
         with:
-          name: coverage-report
-          path: coverage/ 
+          name: test-results
+          path: test-results/ 
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests]
+    needs: [run-tests]  
 
     steps:
       - name: Checkout code
@@ -48,7 +48,7 @@ jobs:
         run: npm ci
 
       - name: Build the application
-        run: npm run build -- out-dir=build  
+        run: npm run build -- --out-dir=build  
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
@@ -59,14 +59,14 @@ jobs:
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: [run-tests]
+    needs: [run-tests]  
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install mailutils
-        run: sudo apt-get update && sudo apt-get install -y mailutils
+        run: sudo apt-get update && sudo apt-get install -y mailutils  
 
       - name: Make script executable
         run: chmod +x scripts/shell.sh
