--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -21,12 +21,18 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test  
+        run: npm run test -- --reporter=json --reporter-output=report.json
+
+      - name: Upload Test Report Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: report.json
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [run-tests]  
+    needs: [run-tests]
 
     steps:
       - name: Checkout code
@@ -42,18 +48,18 @@ jobs:
         run: npm ci
 
       - name: Build the application
-        run: npm run build -- out-dir=build  
+        run: npm run build -- out-dir=build
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: build/  
+          path: build/
 
   notification:
     name: Send Notification
     runs-on: ubuntu-latest
-    needs: [run-tests]  
+    needs: [run-tests]
 
     steps:
       - name: Checkout code
@@ -68,4 +74,4 @@ jobs:
       - name: Execute external script to send email
         run: sh scripts/shell.sh
         env:
-          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}  
+          NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
