--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test -- --reporter=json --reporter-output=report.json
+        run: npx vitest run
 
       - name: Upload Test Report Artifact
         uses: actions/upload-artifact@v3
