--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-report
-          path: report.json
+          path: coverage/report.json
 
   build:
     name: Build Application
